<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorDark"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".fragment.PasswordFragment">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:src= "@drawable/ic_back_west"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continueCredentials"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/source_code_pro_bold"
        android:textSize="30sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inputHere"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/source_code_pro_bold"
        android:textSize="30sp"
        android:layout_marginStart = "40dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/colorLightGray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorDark"
            android:hint="@string/email"
            >

        </com.google.android.material.textfield.TextInputEditText>




    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        app:startIconDrawable="@drawable/contact"
        app:startIconTint="@color/colorLightGray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contactNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorDark"
            android:hint="@string/contact"
            >

        </com.google.android.material.textfield.TextInputEditText>




    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstPassword_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        app:startIconDrawable="@drawable/password_icon"
        app:startIconTint="@color/colorLightGray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorDark"
            android:hint="@string/first_password">

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/secondPassword_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        app:startIconDrawable="@drawable/password_icon"
        app:startIconTint="@color/colorLightGray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/secondPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorDark"
            android:hint="@string/second_password">

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>

    <com.royrodriguez.transitionbutton.TransitionButton
        android:layout_width="219dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/signup"
        android:textColor="@color/colorDark"
        app:defaultColor="#0cecda">

    </com.royrodriguez.transitionbutton.TransitionButton>

</LinearLayout>