<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorDark"
        android:orientation="vertical"
        android:padding="25dp"
        tools:context=".controller.activity.LoginRegisterActivity">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/imageAnimation"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="8dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/logologin" />

        <TextView
            android:id="@+id/loginLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/welcome"
            android:textColor="@color/colorWhite"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/signUpHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/colorLightGray"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_text_layout"
                style="@style/TextInputLayoutDesign"
                android:inputType="text|textPersonName"
                android:paddingBottom="10dp"
                app:errorTextAppearance="@style/ErrorApperance"
                app:hintTextColor="@color/colorWhite"
                app:startIconDrawable="@drawable/person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_field_not_active"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input_layout"
                style="@style/PasswordLayoutDesign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_field_not_active"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                app:startIconDrawable="@drawable/password_icon">


                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/text_field_not_active"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/colorWhite">


                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp">

                <com.royrodriguez.transitionbutton.TransitionButton
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_gravity=""
                    android:text="@string/login"
                    android:textColor="@color/superDark"
                    app:defaultColor="#0cecda" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/forgotPasswordLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="#00000000"
                    android:text="@string/forgot"
                    android:textColor="@color/button_color"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="90dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/swipe_right_animation" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/swipe_left"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp">

                </TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>