<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/layout_bg"
        android:layout_marginEnd="50dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/otp_message"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/alarm_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
           />

        <TextView
            android:id="@+id/count_down_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textSize="30sp"
            tools:text="COUNT DOWN TIMER" />

        <TextView
            android:id="@+id/otp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            tools:text="YOUT OTP EXPIRES"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <com.galenleo.widgets.CodeInputView
            android:id="@+id/verify_code"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            app:ciGapWidth="10dp"
            app:ciInputType="number"
            app:ciItemBackground="@drawable/text_field_active"
            app:ciItemCount="6"
            app:ciItemWidth="35dp"
            app:ciTextColor="#FFFFFF"
            app:ciTextSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/did_not_receive_otp"
            android:textAlignment="viewEnd"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight=".5"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/resend_otp"
            android:textColor="@color/button_color"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <com.royrodriguez.transitionbutton.TransitionButton
            android:id="@+id/verify_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_design"
            android:text="@string/verify"
            android:textColor="@color/superDark"
            android:textStyle="bold"
            app:defaultColor="#0cecda" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:gravity="end"
            android:text="@string/cancel_verify_otp"
            android:textColor="@color/button_color"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>