<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textfield_active"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_message"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:fontFamily="@font/roboto_regular"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reset_password_layout"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textfield_active"
            android:inputType="textPassword"
            android:paddingBottom="10dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorApperance"
            app:hintTextColor="@color/colorWhite"
            app:startIconDrawable="@drawable/password_icon"
            app:startIconTint="@color/colorWhite"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorWhite">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reset_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_field_not_active"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="15sp">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reset_confirm_password_layout"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textfield_active"
            android:inputType="textPassword"
            android:paddingBottom="10dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorApperance"
            app:hintTextColor="@color/colorWhite"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorWhite"
            app:startIconDrawable="@drawable/password_icon"
            app:startIconTint="@color/fbutton_color_silver">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reset_confirm_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_field_not_active"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textSize="15sp">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/sumbit_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_field_not_active"
            android:layout_gravity="center"
            android:text="@string/submit_email"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/cancel_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_verify_otp"
            android:textColor="@color/button_color"
            android:textSize="15sp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="end"/>
    </LinearLayout>

</LinearLayout>